<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/min_size"
           />
        <EditText
            android:id="@+id/min_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:text="@string/default_min_size"
			/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hour_size"
           />
        <EditText
            android:id="@+id/hour_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:text="@string/default_hour_size"
			/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/color"
            />
        <Spinner
        android:id="@+id/color_spnner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
     </LinearLayout>
 		<Button android:id="@+id/save_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/save" />
</LinearLayout>
